[package]
name = "meow_engine"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0", features = ["json"] }
rand = "0.8.0"

serde = "1"
serde_json = "1"
